--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Minecraft 3D</title>
+    <title>Minecraft - Multi Blocks</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/scene.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="scene-container">
-        <div class="world">
-            <div class="ground"></div> </div>
-    </div>
+    <div id="scene-container" class="rounded-lg"></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
