--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <body>
     <div id="scene-container" class="rounded-lg"></div>
 
+    <div id="toolbar">
+        <div class="tool-icon" id="pickaxe-tool" data-tool="pickaxe" title="Pickaxe">⛏️</div>
+        <div class="tool-icon" id="grass-block-tool" data-tool="place" data-blocktype="grass" title="Grass Block">🟩</div>
+        <div class="tool-icon" id="dirt-block-tool" data-tool="place" data-blocktype="dirt" title="Dirt Block">🟫</div>
+        <div class="tool-icon" id="stone-block-tool" data-tool="place" data-blocktype="stone" title="Stone Block">🪨</div>
+        </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
     <script src="js/main.js"></script>
